--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 NAME
-    KinoSearchX::Simple - Simple KinoSearch1 Interface, inspired by
-    Plucene::Simple
+    KinoSearchX::Simple - Simple KinoSearch1 Interface, inspired by the now
+    depricated Plucene::Simple
 
 SYNOPSIS
         use KinoSearchX::Simple;
@@ -47,14 +47,19 @@ FUNCTIONS
             'description' => 'this is the description',
         });
 
+    not that it has to be, but its highly recommended that *id* is a unique
+    identifier for this document
+
+    or you'll have to pass $pk to update_or_create
+
   update_or_create( $document, $pk, $pv ) - updates or creates document in the index
         $searcher->update_or_create({
             'id' => 1,
             'title' => 'this is the updated title',
             'description' => 'this is the description',
-        }, 'id', 1);
+        }, 'id');
 
-    $pk defaults to 'id' $pv defaults to $document->{'id'} if not provided
+    $pk is the unique key to lookup by, defaults to 'id'
 
   delete( $key, $value ) - remove document from the index
         $searcher->delete( 'id', 1 );
@@ -96,16 +101,17 @@ ADVANCED
         "this AND is AND search AND query"
 
   resultclass
-    resultclass for results, defaults to KinoSearchX::Simple::Result which
-    creates acessors for each key => value returned
+    resultclass for results, defaults to KinoSearchX::Simple::Result::Object
+    which creates acessors for each key => value returned
+
+    could be changed tp KinoSearchX::Simple::Result::Hash for a plain old,
+    hashref or a custom class
 
   entries_per_page
     default is 100
 
 SUPPORT
     Bugs should always be submitted via the CPAN bug tracker
-
-    <http://rt.cpan.org/NoAuth/ReportBug.html?Queue=KinoSearchX-Simple>
 
     For other issues, contact the maintainer
 
@@ -115,9 +121,10 @@ AUTHORS
 SEE ALSO
     <http://thisaintnews.com>, KinoSearch1, Data::Page, Moose
 
-COPYRIGHT
-    Copyright 2010 n0body <http://thisaintnews.com/> . All rights reserved.
+COPYRIGHT AND LICENSE
+    Copyright (C) 2010 by n0body <http://thisaintnews.com/>
 
-    This program is free software; you can redistribute it and/or modify it
-    under the same terms as Perl itself.
+    This library is free software; you can redistribute it and/or modify it
+    under the same terms as Perl itself, either Perl version 5.10.1 or, at
+    your option, any later version of Perl 5 you may have available.
 
