Import of NOBODY/KinoSearchX-Simple-0.05 from CPAN.
gitpan-cpan-distribution: KinoSearchX-Simple
gitpan-cpan-version:      0.05
gitpan-cpan-path:         NOBODY/KinoSearchX-Simple-0.05.tar.gz
gitpan-cpan-author:       NOBODY
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -1,6 +1,5 @@
 NAME
-    KinoSearchX::Simple - Simple KinoSearch1 Interface, inspired by the now
-    depricated Plucene::Simple
+    KinoSearchX::Simple - Simple KinoSearch1 Interface
 
 SYNOPSIS
         use KinoSearchX::Simple;
@@ -15,6 +14,7 @@ SYNOPSIS
                     'name' => 'description',
                 },{
                     'name' => 'id',
+                    'analysed' => 0, #you don't want the analyser to adjust your id do you?
                 },
             ],
             'search_fields' => ['title', 'description'],
